--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="hero">
         <video autoplay loop muted plays-inline class="bla">
 
-            <source src="video/video.mp4" type="video/mp4"> 
+            <source src="video/video.mp4" type="video/mp4" > 
         </video>
         <nav>
            <img src="images/myanmar.png" class="logo">
            <ul>
             <li><a href="#">HOME</a></li>
-            <li><a href="#">BEACHES</a></li>
+            <!-- <li><a href="#"></a></li> -->
             <li><a href="#">POPULAR PLACES</a></li>
             <li><a href="#">CONTACT US</a></li>
                    
